[package]
name = "llm-chain-llama-rs"
version = "0.1.0"
edition = "2021"
description = "A library implementing `llm-chains` for LLamA. Chains can be use to apply the model series to complete complex tasks, such as agents."
license = "MIT"
keywords = ["llm", "langchain", "llama", "chain"]
categories = ["science"]
authors = [
    "Emil Juzovitski <emil@sobel.io",
    "William Rudenmalm <william@sobel.io>",
    "Todsaporn Banjerdkit<katopz@gist.rs>",
]
readme = "./README.md"
repository = "https://github.com/sobelio/llm-chain/"

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
llama-rs = { path = "../../llama-rs/llama-rs", version = "0.1.0" }
llm-chain = { path = "../llm-chain", version = "0.4.0" }
rand = "0.8.5"
serde = { version = "1.0.159", optional = true, features = ["derive"] }
thiserror = "1.0.40"
num_cpus = "1.15.0"
zstd = { version = "0.12", default-features = false }

[dev-dependencies]
tokio = { version = "1.27.0", features = ["macros", "rt"] }
